# error-repr

./: Cargo.toml  LICENSE-MIT  README.md
src/: error.rs  kind.rs  lib.rs
