[package]
name = "error-repr"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generalization of std::io::Error"
repository = "https://github.com/chorman0773/error-repr"

[dependencies]
cfg-match = "0.2.1"

[features]
error-track_caller = []
alloc = []
std = ["alloc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("lilium"))',
] }

[package.metadata.docs.rs]
all-features = true
